--- a/src/popUp.html
+++ b/src/popUp.html
@@ -17,29 +17,33 @@
             </div>
         </center>
         <div id="main" style="opacity: 0;">
-            <h1 style="font-size: 45px; margin-top: -5px; font-family: 'General Sans', sans-serif;"><img src="assets/_edit.png" draggable="false" width="30px" height="30px"> Edit Task <p style="display: inline; font-style: inherit; font-family: 'General Sans', sans-serif;" class="special">Proprieties:</p></h1>
-            <h4 style="font-weight: 400; margin-top: -30px; font-family: 'Switzer', sans-serif;" id="startingText">Edit the properties of the currently selected task.</h4>
+            <h1 style="font-size: 45px; margin-top: -5px; font-family: 'General Sans', sans-serif;">
+                <img src="assets/_edit.png" draggable="false" width="30px" height="30px">
+                <span data-i18n="editPopUp.editTask"></span>
+                <p style="display: inline; font-style: inherit; font-family: 'General Sans', sans-serif;" class="special">Proprieties:</p>
+            </h1>
+            <h4 style="font-weight: 400; margin-top: -30px; font-family: 'Switzer', sans-serif;" id="startingText" data-i18n="editPopUp.editProprietiesSmall"></h4>
             <div class="modify-task-row">
-                <label for="inputName" style="font-family: 'Switzer', sans-serif;">Task Name: </label>
-                <input type="text" id="inputName" placeholder="Task Name..." title="Enter the new Task Name" maxlength="20">
+                <label for="inputName" style="font-family: 'Switzer', sans-serif;" data-i18n="editPopUp.taskName">Task Name: </label>
+                <input type="text" id="inputName" data-i18n-placeholder="editPopUp.taskNameEllipsis" data-i18n-title="editPopUp.taskTitle" maxlength="20">
             </div>
             <br>
             <div class="modify-task-row">
-                <label for="inputPV" style="font-family: 'Switzer', sans-serif;">Previous Version: </label>
-                <input type="text" id="inputPV" placeholder="Previous Version..." title="Optional" maxlength="10">
+                <label for="inputPV" style="font-family: 'Switzer', sans-serif;" data-i18n="editPopUp.previousVersion">Previous Version: </label>
+                <input type="text" id="inputPV" data-i18n-placeholder="editPopUp.previousVersionEllipsis" data-i18n-title="editPopUp.optional" maxlength="10">
             </div>
             <br>
             <div class="modify-task-row">
-                <label for="inputNV" style="font-family: 'Switzer', sans-serif;">Newer Version: </label>
-                <input type="text" id="inputNV" placeholder="Newer Version..." title="Optional" maxlength="10">
+                <label for="inputNV" style="font-family: 'Switzer', sans-serif;" data-i18n="editPopUp.newerVersion">Newer Version: </label>
+                <input type="text" id="inputNV" data-i18n-placeholder="editPopUp.newerVersionEllipsis" data-i18n-title="editPopUp.optional" maxlength="10">
             </div>
             <br>
             <div class="modify-task-row" style="justify-content: end;" id="buttons">
-                <button onclick="submitInput()" class="editBtn" title="Edit" id="editBtn"><img src="assets/_edit.png" width="20px" height="20px" style="margin-top: 2px;" draggable="false"></button>
-                <button onclick="DeleteTask()" style="background-color: red;" class="deleteBtn" title="Delete"><img src="assets/_delete.png" width="20px" height="20px" style="margin-top: 2px;" draggable="false"></button>
-                <button onclick="Quit()" style="background-color: red;" class="closeBtn" title="Close"><img src="assets/_close.png" width="20px" height="20px" style="margin-top: 2px; margin-left: 1px;" draggable="false"></button>
+                <button onclick="submitInput()" class="editBtn" data-i18n-title="editPopUp.edit" id="editBtn"><img src="assets/_edit.png" width="20px" height="20px" style="margin-top: 2px;" draggable="false"></button>
+                <button onclick="DeleteTask()" style="background-color: red;" class="deleteBtn" data-i18n-title="editPopUp.delete"><img src="assets/_delete.png" width="20px" height="20px" style="margin-top: 2px;" draggable="false"></button>
+                <button onclick="Quit()" style="background-color: red;" class="closeBtn" data-i18n-title="editPopUp.close"><img src="assets/_close.png" width="20px" height="20px" style="margin-top: 2px; margin-left: 1px;" draggable="false"></button>
             </div>
         </div>
     </body>
-    <script src="js/popUp.js"></script>
+    <script src="js/i18n-render.js"></script><script src="js/popUp.js"></script>
 </html>
