--- a/src/index.html
+++ b/src/index.html
@@ -167,6 +167,11 @@
                         <option value="dark" data-i18n="settings.darkTheme"> 🌙 Dark Theme</option>
                         <option value="light" data-i18n="settings.lightTheme"> ☀️ Light Theme</option>
                     </select>
+                    <br><br>
+                    <select name="selectLanguage" id="languageDropDown" class="appLanguage">
+                        <option value="en" data-i18n="languages.english-us"> It</option>
+                        <option value="it" data-i18n="languages.italian"> Us</option>
+                    </select>
                     <br><br><br>
                     <h2 style="text-align: center; font-family: 'General Sans', sans-serif;">
                         <img src="assets/_references.png" draggable="false" height="20px" width="20px">
