fix: styling settings
* adding more infos in settings

--- a/src/index.html
+++ b/src/index.html
@@ -163,11 +163,13 @@
                         <img src="assets/_appearance.png" draggable="false" height="20px" width="20px">
                         <span data-i18n="settings.appearanceSettings"></span>
                     </h2>
+                    <h3 style="color: rgb(170, 167, 167);" data-i18n="settings.themeApplication">TEMA APPLICAZIONE</h3>
                     <select name="selectTheme" id="themeDropDown" class="appTheme">
                         <option value="dark" data-i18n="settings.darkTheme"> 🌙 Dark Theme</option>
                         <option value="light" data-i18n="settings.lightTheme"> ☀️ Light Theme</option>
                     </select>
                     <br><br>
+                    <h3 style="color: rgb(170, 167, 167);" data-i18n="settings.languageApplication">LINGUA APPLICAZIONE</h3>
                     <select name="selectLanguage" id="languageDropDown" class="appLanguage">
                         <option value="en" data-i18n="languages.english-us"> It</option>
                         <option value="it" data-i18n="languages.italian"> Us</option>
