feat: added options
* added an option to choose the days to show in the chart

--- a/src/index.html
+++ b/src/index.html
@@ -101,6 +101,15 @@
                         </select>
                     </div>
                 </center>
+                <h3 style="text-align: center; font-weight: 300;">
+                    <span data-i18n="settings.daysToShow"></span>
+                    <select name="selectDays" id="daysToShowDropdown" style="width: 4%; height: 25px">
+                        <option value="2" title="2">2</option>
+                        <option value="7" title="7">7</option>
+                        <option value="15" title="15">15</option>
+                        <option value="30" title="30">30</option>
+                    </select>
+                </h3>
                 <h3 class="tip" style="font-weight: 300;">
                     <img src="assets/_tip.png" height="20px" width="20px" draggable="false" id="tipImage">
                     <p style="display: inline; color: orange;">
