feat: added spanish
* added spanish translations

--- a/src/index.html
+++ b/src/index.html
@@ -193,6 +193,7 @@
                     <select name="selectLanguage" id="languageDropDown" class="appLanguage">
                         <option value="en" data-i18n="languages.english-us"> It</option>
                         <option value="it" data-i18n="languages.italian"> Us</option>
+                        <option value="es" data-i18n="languages.spanish"> Es</option>
                     </select>
                     <br><br><br>
                     <h2 style="text-align: center; font-family: 'General Sans', sans-serif;">
